# renode-ws-proxy

./: .ci.yml  .gitignore  .prettierignore  Dockerfile  README.md  esbuild.js  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
js-client/: events.ts  index.ts  peripheral.ts  schema.ts  sensor.ts  utils.ts  version.ts
renode_hypervisor/: hypervisor.py  hypervisor_client.py  renode.py  telnet_proxy.py
renode_instance/: gpio.py  renode.py  sensors.py  state.py  utils.py
renode_ws_proxy/: argparser.py  filesystem.py  protocols.py  renode.py  stream_proxy.py  telnet_proxy.py  ws_proxy.py  ws_proxy_client.py
stubs/AntShell/: __init__.py
stubs/AntShell/Terminal/: __init__.py
stubs/Antmicro/Renode/: __init__.py
stubs/Antmicro/Renode/Analyzers/: __init__.py
stubs/Antmicro/Renode/Core/: __init__.py
stubs/Antmicro/Renode/Logging/: __init__.py
stubs/Antmicro/Renode/Peripherals/: __init__.py
stubs/Antmicro/Renode/Peripherals/Miscellaneous/: __init__.py
stubs/Antmicro/Renode/Peripherals/Sensor/: __init__.py
stubs/Antmicro/Renode/Peripherals/UART/: __init__.py
stubs/Antmicro/Renode/UI/: __init__.py
stubs/Antmicro/Renode/UserInterface/: __init__.py
stubs/Antmicro/Renode/Utilities/: __init__.py
stubs/System/: __init__.py
stubs/clr/: __init__.py
tests/: filesystem_test.py
