# Copyright (c) 2024 Antmicro <www.antmicro.com>
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "renode-hypervisor"
version = "0.0.1"
authors = [{name = "Antmicro Ltd.", email = "contact@antmicro.com"}]
description = "Renode hypervisor for remote instances"
dependencies = [
    "websockets==12.*",
    "telnetlib3==2.0.*",
    "psutil==6.0.*",
]

classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Utilities',
]

[project.scripts]
renode-hypervisor = 'renode_hypervisor.hypervisor:run'

[tool.setuptools]
packages = ["renode_hypervisor"]
