# Copyright (c) 2024 Antmicro <www.antmicro.com>
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "renode-ws-proxy"
version = "0.0.1"
authors = [{name = "Antmicro Ltd.", email = "contact@antmicro.com"}]
description = "Renode WebSocket Proxy for remote instances"
dependencies = [
    "websockets==13.*",
    "telnetlib3==2.0.*",
    "psutil==6.0.*",
]

classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Utilities',
]

[project.scripts]
renode-ws-proxy = 'renode_ws_proxy.ws_proxy:run'

[project.optional-dependencies]
dev = [
    'pytest==8.3.*',
    'ruff==0.6.*',
    'pyright==1.1.*',
]

[tool.setuptools]
packages = ["renode_ws_proxy"]
